# Sai-nawkeyboard

./: .gitattributes  SettingsActivity.kt  activity_settings.xml  build.gradle  earch sdk  myanmar.xml  qwerty.xml  settings.gradle
.github/workflows/: android.yml  build.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro  release.keystore
app/src/assets/: index.txt
app/src/main/: AndroidManifest.xml  ​AndroidManifest.xml
app/src/main/Assets/: shan_mapping.txt
app/src/main/assets/: banknote_model.tflite  burmese_tokens.txt  emoji_mapping.txt  index.txt  mapping .txt  mapping.txt  pronunciation_mapping.txt
app/src/main/assets/shn/: tokens.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  sonic.c  sonic.h
app/src/main/java/com/Cherry/sme/tts/: AutoTTSManagerService.java  CheckVoiceData.java  GetSampleText.java  LogCollector.java  LogViewerActivity.java  MainActivity.java  RemoteTextToSpeech.java  TTSUtils.java
app/src/main/java/com/k2fsa/sherpa/onnx/tts/engine/: MainActivity.kt  TtsEngine.kt  TtsService.kt
app/src/main/java/com/mmk/scanner/talk/: BanknoteClassifier.java  CameraActivity.java  MainActivity.java
app/src/main/java/com/mmkscanner/talk/: BanknoteClassifier.java  MainActivity.java  SettingsActivity.java
app/src/main/java/com/moneyreader/myanmar/: BanknoteClassifier.java  CameraActivity.java  HistoryActivity.java  MainActivity.java  SettingsActivity.java
app/src/main/java/com/panglong/tts/: AppLogger.kt  CheckVoiceData.kt  GetSampleText.kt  MainActivity.kt  PanglongTtsService.kt  PanglongTtsSettingsActivity.kt
app/src/main/java/com/sainaw/mm/board/: AccessibilitySettingsActivity.java  FeedbackSettingsActivity.java  LanguageSettingsActivity.java  SaiNawAccessibilityDelegate.java  SaiNawAccessibilityHelper.java  SaiNawCoreLogic.java  SaiNawEmojiManager.java  SaiNawFeedbackManager.java  SaiNawInputLogic.java  SaiNawKeyboardService.java  SaiNawKeyboardService.kt  SaiNawLayoutManager.java  SaiNawPhoneticManager.java  SaiNawSettingsManager.java  SaiNawSmartEcho.java  SaiNawTextProcessor.java  SaiNawTouchHandler.java  SaiNawUIHelper.java  SaiNawZipHelper.java  SettingsActivity.java  SuggestionDB.java
app/src/main/java/com/shan/tts/: CheckVoiceData.kt  DebugActivity.kt  GetSampleText.kt  InstallVoiceData.kt  LogUtils.kt  ShanTtsService.kt  ShanTtsSettingsActivity.kt
app/src/main/java/com/shan/tts/manager/: AppLogger.kt  AudioProcessor.kt  AutoTTSManagerService.kt  CheckVoiceData.kt  EngineScanner.kt  GetSampleText.kt  LangChunk.kt  LanguageUtils.kt  LogHistory.kt  LogViewerActivity.kt  MainActivity.kt  ShanTtsSettingsActivity.kt  Sonic.java  SonicStreamer.kt  TTSUtils.kt  VoiceConfig.kt  VoiceModel.kt  WavUtils.kt
app/src/main/res/drawable/: bg_card.xml  bg_spinner.xml  btn_danger.xml  btn_primary.xml  btn_secondary.xml  ic_keyboard_backspace.xml  ic_keyboard_language.xml  ic_keyboard_return.xml  ic_keyboard_shift.xml  ic_keyboard_voice.xml  ic_launcher.xml  key_background.xml  key_btn_dark.xml  key_btn_light.xml
app/src/main/res/layout/: activity_accessibility_settings.xml  activity_camera.xml  activity_feedback_settings.xml  activity_history.xml  activity_language_settings.xml  activity_main.xml  activity_settings.xml  activity_shan_tts_settings.xml  input_view.xml  input_view_dark.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: emoji.xml  kbd_emoji_2.xml  method.xml  myanmar.xml  myanmar_num.xml  myanmar_shift.xml  number_pad.xml  qwerty.xml  qwerty_num.xml  qwerty_num_shift.xml  qwerty_shift.xml  shan.xml  shan_num.xml  shan_shift.xml  symbols.xml  symbols_mm.xml  symbols_mm_shift.xml  symbols_shift.xml  tts_engine.xml  tts_engine_resource.xml
app/src/main/xml/: myanmar_shift.xml  qwerty_shift.xml  shan_num.xml  shan_shift.xml  symbols_mm.xml
credentials/: release.keystore  release.keystore.properties
